--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,20 +1,20 @@
 <resources>
     <string name="app_name">Recraftify</string>
-    <string name="title_welcome">Selamat Datang di Recraftify</string>
-    <string name="desc_welcome">Memahami sampah lebih baik untuk hidup \n yang lebih ramah lingkungan</string>
     <string name="btn_masuk">Masuk</string>
     <string name="btn_daftar">Daftar</string>
     <string name="nama">Nama</string>
-    <string name="title_signup">Lengkapi data diri Anda di bawah ini!</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
-    <string name="title_login">Masukkan email dan password Anda</string>
     <string name="home">Home</string>
     <string name="maps">Maps</string>
-    <string name="bookmarked">Saved</string>
     <string name="scan">Scan</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="logout">logout</string>
     <string name="searchbar">Masukkan kata kunci</string>
+    <string name="camera">Camera</string>
+    <string name="galeri">Galeri</string>
+    <string name="btn_scan">Scan</string>
+    <string name="Info">Pastikan objek terlihat dengan jelas</string>
+    <string name="info">Belum punya akun?</string>
+    <string name="info2">Buat akun</string>
+    <string name="title_signup">Mendaftar Recraftify</string>
 </resources>
