--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,8 @@
     <string name="galeri">Galeri</string>
     <string name="btn_scan">Scan</string>
     <string name="Info">Pastikan objek terlihat dengan jelas</string>
-    <string name="info">Belum punya akun?</string>
-    <string name="info2">Buat akun</string>
+    <string name="info">Sudah punya akun?</string>
+    <string name="info2">Masuk</string>
     <string name="title_signup">Mendaftar Recraftify</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
