--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,15 @@
     <string name="info2">Masuk</string>
     <string name="title_signup">Mendaftar Recraftify</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="judul_resep">Judul Resep Pengolahan Sampah</string>
+    <string name="tv_judul_jenis_sampah">Jenis sampah :</string>
+    <string name="tv_jenis_sampah">Daun kering</string>
+    <string name="judul_metode">Metode pemilahan :</string>
+    <string name="tv_metode">Kompos</string>
+    <string name="judul_petunjuk">Langkah - langkah :</string>
+    <string name="tv_langkah">langkah 1\nlangkah 2\nlangkah 3</string>
+    <string name="dampak">Dampak lingkungan :</string>
+    <string name="info_dampak">dampak lingkungan</string>
+    <string name="manfaat">Manfaat daur ulang :</string>
+    <string name="info_manfaat">info manfaat</string>
 </resources>
